Fri Jul 22 09:09:43 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* ext/openssl/ossl_engine.c: Avoid double free of ENGINE reference.
	* test/openssl/test_engine.rb: Add a test for it.
	  Thanks to Ippei Obayashi for providing the patch.
	  [ Ruby 1.9 - Bug #5062 ] [ruby-dev:44173]

Fri Jul 22 06:37:13 2011  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/csv.rb: Do not modify CSV.generate's argument [ruby-core:38356]

Thu Jul 21 20:59:59 2011  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ancdata.c (discard_cmsg): workaround for MacOS X Lion.

Thu Jul 21 20:02:11 2011  Yusuke Endoh  <mame@tsg.ne.jp>

	* thread.c (set_trace_func, thread_set_trace_func_m): reset tracing
	  state when set_trace_func hook is removed.  This is workaround patch
	  to force to reset tracing state that is broken by continuation call.
	  a patch from James M. Lawrence.  [Feature #4347] [ruby-core:34998]

	* test/ruby/test_continuation.rb (class TestContinuation): add a test
	  for above.  a patch from James M. Lawrence.

Thu Jul 21 19:27:19 2011  Yusuke Endoh  <mame@tsg.ne.jp>

	* node.c (dump_node): add today's knowledge.  "init arguments (m)" and
	  "init arguments (p)" of compile.c indicates a Ruby code that
	  evaluates multiple assignments that is in method or block
	  parameters:  def foo((m1,m2), (m3,m4), *r, (p1,p2), (p3,p4)); end
	  The former (init arguments (m)) evaluates the multiple assignments
	  before rest argument, that are (m1,m2) and (m3,m4).  The letter
	  (init arguments (p)) does ones after rest argument, that are
	  (p1,p2) and (p3, p4).

Thu Jul 21 18:11:07 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* enum.c (enum_inject): remove empty line to notify rdoc
	  Enumerable#reduce is alias. patched by milki@github.
	  https://github.com/ruby/ruby/pull/26

Thu Jul 21 17:30:21 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* array.c (rb_ary_delete_at_m): use simple array literal in rdoc.
	  patched by samuel tonini. [ruby-core:38310] [Bug #5066]
